<resources>
    <string name="app_name">仓储管理系统</string>

    //登陆模块
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_label_login">登陆</string>
    <string name="login_label_register">注册</string>
    <string name="login_title">登陆</string>
    <string name="login_enter_account">请输入用户名！</string>
    <string name="login_enter_password">请输入密码！</string>

    //注册模块
    <string name="register_title">注册</string>
    <string name="register_company_id">公司名称：</string>
    <string name="register_company_id_hint">请输入公司名称</string>
    <string name="register_username">用户名：</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_nick">昵称：</string>
    <string name="register_nick_hint">请输入昵称</string>
    <string name="register_t_password">密码：</string>
    <string name="register_t_password_hint">请输入密码</string>
    <string name="register_toast_pattern">请输入%s</string>

    //主页面
    <string name="main_title">仓库管理系统</string>
    <string name="main_module_shelf">上架</string>
    <string name="main_module_replenish">补货</string>
    <string name="main_module_down">下架</string>
    <string name="main_module_report">报表</string>
    <string name="main_module_input">录入</string>
    <string name="main_module_layout">布局</string>
    <string name="main_nav_about">关于应用</string>
    <string name="main_nav_switch">切换用户</string>
    <string name="main_nav_exit">退出应用</string>

    //通用
    <string name="common_item_barcode">商品条码：</string>
    <string name="common_barcode_hint">请扫描商品条码</string>
    <string name="common_go_scan">去扫码</string>
    <string name="common_item_name">商品名称：</string>
    <string name="common_item_spec">商品规格：</string>
    <string name="common_item_brand">商品品牌：</string>
    <string name="common_store_loc">存放库位：</string>
    <string name="common_up_loc">上架库位：</string>
    <string name="common_up_loc_hint">请扫描上架库位</string>
    <string name="common_up_num">上架数量：</string>
    <string name="common_up_num_hint">请输入上架数量</string>
    <string name="common_store_loc_hint">请扫描库位</string>
    <string name="common_amount">存放数量：</string>
    <string name="common_submit">提交</string>
    <string name="common_quick_submit">快速生成</string>
    <string name="common_yes">确认</string>
    <string name="common_loc">库位：</string>
    <string name="common_save">保存</string>
    <string name="common_cancel">取消</string>
    <string name="common_result">扫码结果：</string>
    <string name="common_dash">-</string>

    //扫码
    <string name="scan_title">扫码</string>

    //录入
    <string name="input_item_title">商品录入</string>
    
    //关于
    <string name="about_current_version">当前版本  %s</string>
    <string name="about_title">关于</string>

    //下架
    <string name="off_shelf_title">下架</string>
    <string name="off_shelf_loc">下架库位：</string>
    <string name="off_shelf_num">下架数量：</string>

    //布局
    <string name="layout_title">布局</string>
    <string name="layout_loc_name">库位名称：</string>
    <string name="layout_pos">库位坐标：</string>
    <string name="layout_ava_count">可用库存：</string>
    <string name="layout_total_count">库存总量：</string>
    <string name="layout_dialog_toast">%s不能为空</string>

    //上架
    <string name="up_shelf_title">上架</string>
    <string name="up_shelf_order">上架单号：</string>
    <string name="up_shelf_order_hit">请输入上架单号</string>

    //报表
    <string name="report_title">报表</string>
    <string name="report_chart_info">商品最近7天销量走势图</string>

    //补货
    <string name="replenish_title">补货</string>
    <string name="replenish_item_name">商品名称：</string>
    <string name="replenish_recently_sale">最近7天销量：</string>
    <string name="replenish_stock_count">库存数量：</string>
    <string name="replenish_recommend">推荐补货数量：</string>
    <string name="replenish_count">补货数量：</string>
</resources>
