<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.kt.james.wmsforandroid.business.input.InputViewModel" />
    </data>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_item_barcode"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.barcode}"
                    android:enabled="false"
                    android:id="@+id/et_scan_barcode"
                    android:hint="@string/common_barcode_hint"
                    style="@style/CommonEditText" />

                <Button
                    android:id="@+id/et_go_scan_item"
                    android:text="@string/common_go_scan"
                    style="@style/CommonButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_item_name"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.name}"
                    android:enabled="false"
                    android:id="@+id/et_item_name"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_item_spec"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.spec}"
                    android:enabled="false"
                    android:id="@+id/et_item_spec"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_item_brand"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.brand}"
                    android:enabled="false"
                    android:id="@+id/et_item_brand"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_store_loc"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.loc}"
                    android:enabled="false"
                    android:id="@+id/et_scan_loc"
                    android:hint="@string/common_store_loc_hint"
                    style="@style/CommonEditText" />

                <Button
                    android:id="@+id/bt_go_scan_loc"
                    android:text="@string/common_go_scan"
                    style="@style/CommonButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/common_amount"
                    style="@style/CommonText" />

                <EditText
                    android:text="@={viewModel.amount}"
                    android:id="@+id/et_item_amount"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="match_parent"
                    android:text="@string/common_submit"
                    style="@style/CommonButton" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>