<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textSize="18sp"
            android:id="@+id/layout_title"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:background="@color/colorTheme"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/layout_loc_name"
                    style="@style/CommonText" />

                <EditText
                    android:id="@+id/et_loc_name"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/layout_pos"
                    style="@style/CommonText" />

                <EditText
                    android:id="@+id/et_loc_pos"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/layout_ava_count"
                    style="@style/CommonText" />

                <EditText
                    android:id="@+id/et_layout_ava"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/layout_total_count"
                    style="@style/CommonText" />

                <EditText
                    android:id="@+id/et_layout_total_count"
                    style="@style/CommonEditText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_marginRight="5dp"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/bt_save"
                    android:layout_width="match_parent"
                    android:text="@string/common_save"
                    style="@style/CommonButton" />

                <Button
                    android:layout_marginLeft="5dp"
                    android:width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/bt_cancel"
                    android:layout_width="match_parent"
                    android:text="@string/common_cancel"
                    style="@style/CommonButton" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>